--- a/Backend/.env
+++ b/Backend/.env
@@ -1,9 +1,5 @@
-CALLBACK_BASE_URL=https://4aba-77-235-30-60.ngrok-free.app/finik/notify
-
-FINIK_API_URL=https://api.paymentsgateway.averspay.kg/graphql
-
-NGROK_AUTHTOKEN=2mkQmHizEd1ygXxSsZVZIdSoCre_5LJYLXJM5nfTmHPLzY5Pd
-
-NGROK_HOST=jarvis.ngrok.pro
-
 PORT=3000
+NGROK_AUTHTOKEN=2zx27B4BawJtX36a3J1wMW6vTlc_7G2AxLKYTBbFQdb7eRN4H
+NGROK_HOST=jarvis-finikpay.ngrok.pro
+CALLBACK_BASE_URL=https://jarvis-finikpay.ngrok.pro/finik/notify
+FINIK_API_URL=https://api.paymentsgateway.averspay.kg/graphql
