--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "start": "node app.js",
-  "dev": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
-  "axios": "^1.9.0",
-  "body-parser": "^2.2.0",
-  "dotenv": "^16.5.0",
-  "express": "^5.1.0"
+    "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
-  "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10"
   }
 }
